--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-mkdocs-material~=9.5
-mkdocs
-mkdocs-awesome-pages-plugin
+mkdocs>=1.6.0
+mkdocs-material>=9.5.0
+mkdocs-awesome-pages-plugin>=2.9.1
+mkdocs-material-extensions>=1.3
+mkdocs-git-revision-date-plugin>=0.3.2
